--- a/StudyFlow/Views/Shared/_Layout.cshtml
+++ b/StudyFlow/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Tasks" asp-action="Index">Tasks</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Tasks" asp-action="Calendar">Calendar</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
