--- a/StudyFlow/Views/Tasks/Index.cshtml
+++ b/StudyFlow/Views/Tasks/Index.cshtml
@@ -56,6 +56,18 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.DueDate)
                 </td>
+
+                @*<td>
+            <div class="calendar-container">
+            <div id="createdAtCalendar_@item.Id" class="calendar"></div>
+            </div>
+            </td>
+            <td>
+            <div class="calendar-container">
+            <div id="dueDateCalendar_@item.Id" class="calendar"></div>
+            </div>
+            </td>*@
+
                 <td>
                     <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                     <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
@@ -66,7 +78,18 @@
     </tbody>
 </table>
 
-<script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+<link href="https://code.jquery.com/ui/1.13.1/themes/base/jquery-ui.css" rel="stylesheet" />
+
+<script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
+
+<link href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.2/fullcalendar.min.css" rel="stylesheet" />
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.2/fullcalendar.min.js"></script>
+
+
+@*<script src="~/lib/jquery/dist/jquery.min.js"></script>*@
 
 <link rel="stylesheet" href="https://cdn.datatables.net/1.13.4/css/jquery.dataTables.css" />
 
@@ -94,4 +117,46 @@
             }]
         });
     });
+
+    @*js(function () {
+        @foreach (var item in Model)
+        {
+        <text>
+        js('#createdAtCalendar_@item.Id').fullCalendar({
+        defaultDate: '@item.CreatedAt.ToString("yyyy-MM-dd")',
+        editable: false,
+        eventStartEditable: false,
+        eventDurationEditable: false,
+        eventOverlap: false,
+        events: [
+        {
+        title: '@item.Title' + " Created",
+        start: '@item.CreatedAt.ToString("yyyy-MM-dd")'
+        }
+        ]
+        });
+
+        js('#dueDateCalendar_@item.Id').fullCalendar({
+        defaultDate: '@item.DueDate.ToString("yyyy-MM-dd")',
+        editable: false,
+        eventStartEditable: false,
+        eventDurationEditable: false,
+        eventOverlap: false,
+        events: [
+        {
+        title: '@item.Title' + " Due Date",
+        start: '@item.DueDate.ToString("yyyy-MM-dd")'
+        }
+        ]
+        });
+        </text>
+        }});*@
 </script>
+
+@*<style>
+    .calendar-container {
+        width: 400px; /* Adjust the width as needed */
+        height: 400px; /* Adjust the height as needed */
+        overflow: hidden; /* Ensures the calendar remains within the specified dimensions */
+    }
+</style>*@
