--- a/StudyFlow/Views/Home/Index.cshtml
+++ b/StudyFlow/Views/Home/Index.cshtml
@@ -2,7 +2,229 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+
+<div class="text-center" id="home">
+
+    <div id="firstDiv">
+        <div>
+            <h1 id="tagLine"><b>CREATE YOUR<br>PERFECT PLAN</b></h1>
+            <p>Web application that helps students plan their<br>study schedules and manage their time effectively.</p>
+            <button class="btn"><img src="../resources/Vector.png"><p>Plan your day</p></button>
+        </div>
+        <img id="landingImage" class="text-center img-fluid" src="../resources/Laptop 3D.png">
+    </div>
+    <div id="grayDiv">
+        <div id="graySubDivOne">
+            <h1><b>Features</b></h1>
+            <p>Explore our unique advantages for better time management</p>
+        </div>
+        <div id="graySubDivTwo">
+            <div id="calendarAndDashboardDiv">
+                <div id="calendar">
+                    <img src="../resources/calendar.png">
+                    <h5><b>Calendar</b></h5>
+                    <p>The calendar feature allows students to keep track of assignments, deadlines, exams, and other important dates in one place.</p>
+                </div>
+                <div id="dashboard">
+                    <img src="../resources/keyboardopen.png">
+                    <h5><b>Dashboard</b></h5>
+                    <p>The dashboard feature provides a centralized location where learners can view their study schedule and track their progress.</p>
+                </div>
+            </div>
+            <div id="toDoAndLimitlessDiv">
+                <div id="toDo">
+                    <img src="../resources/penremove.png">
+                    <h5><b>To-do Lists</b></h5>
+                    <p>Students can create a list of tasks that need to be completed, set deadlines, and prioritize their work.</p>
+                </div>
+                <div id="limitless">
+                    <img src="../resources/chart.png">
+                    <h5><b>Limitless Capabilities</b></h5>
+                    <p>Setup. Track. Create your own student plan in order to expand your productivity and time.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="thirdDiv">
+        <div id="calendarDiv"><img src="../resources/Calendar 3D.png"></div>
+        <div id="studyFlowExplanationDiv">
+            <h1><b>What is StudyFlow?</b></h1>
+            <p>It's a project management system that offers users a way to more efficiently organize their tasks throughout the day, month and year.</p>
+            <h5><b>StudyFlow lets you:</b></h5>
+            <div id="indentedDiv">
+                <h1><b>Track your day in one place.</b></h1>
+                <p>Stay organized with our calendar and the daily analytics or the spend time.</p>
+                <h1><b>Manage your to-do list.</b></h1>
+                <p>Stay organized with our calendar and the daily analytics or the spend time.</p>
+                <h1><b>Track your day in one place.</b></h1>
+                <p>Stay organized with our calendar and the daily analytics or the spend time.</p>
+            </div>
+        </div>
+    </div>
+    <div id="footerDiv">
+        <div id="studyFlow">
+            <a href="#"><img src="../resources/StudyFlow%201.png"></a>
+        </div>
+        <div id="links">
+            <a href="#"><img src="../resources/icon _github_.png"></a>
+            <a href="#"><img src="../resources/icon _mail_.png"></a>
+            <a href="#"><img src="../resources/icon _linkedin_.png"></a>
+            <a href="#"><img src="../resources/icon _behance_.png"></a>
+        </div>
+    </div>
+
 </div>
+
+
+
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+
+<style>
+    #firstDiv {
+        margin-left: 15%;
+        display: flex;
+    }
+
+        #firstDiv > img {
+            margin-left: 10%;
+            width: 50%;
+            object-fit: contain;
+        }
+
+        #firstDiv > div > p {
+            text-align: left;
+            color: white;
+            border-left: 1px solid #3020E9;
+            padding-left: 10px;
+            font-size: 14px;
+        }
+
+    #tagLine {
+        font-size: 50px;
+        margin-top: 80%;
+        color: white;
+        text-align: left;
+    }
+
+    #home {
+        font-family: sans-serif,Inter;
+        background: black;
+        margin-top: -50px;
+    }
+
+    #firstDiv > div > button {
+        display: inline-flex;
+        justify-content: center;
+        height: 46px;
+        border-radius: 15px;
+        padding-left: 7%;
+        padding-right: 7%;
+        margin-bottom: 10%;
+        background: #3020E9;
+        margin-right: 60%;
+    }
+
+        #firstDiv > div > button > p {
+            margin-left: 10%;
+            white-space: nowrap;
+            margin-top: 2%;
+            color: white;
+        }
+
+        #firstDiv > div > button > img {
+            margin-top: 5%;
+        }
+
+    #grayDiv {
+        background-color: #1A1A1A;
+        border-radius: 15px;
+        margin-right: 10%;
+        margin-left: 10%;
+        margin-top: 5%;
+        color: white;
+        display: flex;
+        padding: 5%;
+        text-align: left;
+    }
+
+    #graySubDivTwo {
+        display: flex;
+    }
+
+    #graySubDivOne > p {
+        font-size: 14px;
+    }
+
+    #calendarAndDashboardDiv > div > p {
+        font-size: 14px;
+    }
+
+    #toDoAndLimitlessDiv > div > p {
+        font-size: 14px;
+    }
+
+    #toDoAndLimitlessDiv {
+        position: relative;
+        left: 20%;
+        width: 35%;
+    }
+
+    #calendarAndDashboardDiv {
+        position: relative;
+        left: 13%;
+        width: 40%;
+    }
+
+    #thirdDiv {
+        display: flex;
+        margin-left: 10%;
+        margin-right: 10%;
+    }
+
+        #thirdDiv > #calendarDiv > img {
+            width: 150%;
+            object-fit: contain;
+            margin-left: 15%;
+        }
+
+    #studyFlowExplanationDiv {
+        color: white;
+        margin-top: 10%;
+        text-align: left;
+        margin-left: 30%;
+    }
+
+        #studyFlowExplanationDiv > p {
+            font-size: 14px;
+        }
+
+        #studyFlowExplanationDiv > h5 {
+            font-size: 14px;
+        }
+
+    #indentedDiv {
+        margin-left: 10%;
+        font-size: 14px;
+    }
+
+        #indentedDiv > h1 {
+            font-size: 14px;
+        }
+
+    #footerDiv {
+        display: flex;
+        padding: 2%;
+    }
+
+        #footerDiv > #studyFlow {
+            margin-top: 5%;
+            margin-left: 5%;
+            margin-bottom: 5%;
+        }
+
+        #footerDiv > #links {
+            margin-top: 5%;
+            margin-left: 50%;
+        }
+</style>
