--- a/StudyFlow/Views/Shared/_Layout.cshtml
+++ b/StudyFlow/Views/Shared/_Layout.cshtml
@@ -7,29 +7,61 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/StudyFlow.styles.css" asp-append-version="true" />
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+
+    <style>
+        body {
+            background-color: black !important;
+            color: white !important;
+            font-family: 'Inter', sans-serif;
+        }
+
+        #footerDiv {
+            display: flex;
+            padding: 2%;
+        }
+
+            #footerDiv > #studyFlow {
+                margin-top: 5%;
+                margin-left: 5%;
+                margin-bottom: 5%;
+            }
+
+            #footerDiv > #links {
+                margin-top: 5%;
+                margin-left: 50%;
+            }
+
+    </style>
+
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">StudyFlow</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><img src="~/resources/StudyFlow%201.png"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
+                    <ul class="navbar-nav flex-grow-1 justify-content-center">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Tasks" asp-action="Calendar">Calendar</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Tasks" asp-action="Index">Tasks</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Tasks" asp-action="Index">Tasks</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Tasks" asp-action="Calendar">Calendar</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Tasks" asp-action="Dashboard">Dashboard</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="ContactUs">Contact us</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
@@ -43,11 +75,31 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2023 - StudyFlow - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
-    </footer>
+    @*<footer class="footer text-muted">
+    <div class="container text-center">
+    &copy; 2023 - studyflow
+    </div>
+    </footer>*@
+
+    @*<footer class="footer text-muted mt-5">
+    <div class="container text-center">
+    <div class="row">
+    <div class="col-md-6 text-left">
+    <a href="#"><img src="../resources/StudyFlow%201.png"></a>
+    </div>
+    <div class="col-md-6 text-right">
+    <a href="#"><img src="../resources/icon _github_.png"></a>
+    <a href="#"><img src="../resources/icon _mail_.png"></a>
+    <a href="#"><img src="../resources/icon _linkedin_.png"></a>
+    <a href="#"><img src="../resources/icon _behance_.png"></a>
+    </div>
+    </div>
+    </div>
+    </footer>*@
+
+
+
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
