--- a/StudyFlow/Views/Tasks/Index.cshtml
+++ b/StudyFlow/Views/Tasks/Index.cshtml
@@ -1,16 +1,14 @@
-﻿@model IEnumerable<StudyFlow.Models.Domain.Task>
+﻿@using StudyFlow.Models.Domain.Enumeration;
+@model IEnumerable<StudyFlow.Models.Domain.Task>
 
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table id="taskTable" class="table display">
+
+@*<table id="taskTable" class="table display">
     <thead>
         <tr>
             <th>
@@ -57,16 +55,7 @@
                     @Html.DisplayFor(modelItem => item.DueDate)
                 </td>
 
-                @*<td>
-            <div class="calendar-container">
-            <div id="createdAtCalendar_@item.Id" class="calendar"></div>
-            </div>
-            </td>
-            <td>
-            <div class="calendar-container">
-            <div id="dueDateCalendar_@item.Id" class="calendar"></div>
-            </div>
-            </td>*@
+                
 
                 <td>
                     <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
@@ -76,7 +65,308 @@
             </tr>
         }
     </tbody>
-</table>
+</table>*@
+
+
+
+
+
+
+<div class="container justify-content-center mt-5">
+
+    <h1>Tasks</h1>
+
+    <div class="row">
+
+        
+
+
+        <div class="col-md-3 box mr-5 ml-5 p-3">
+            <div class="text-center mb-3">
+                <h5 class="font-weight-bold">To Do</h5>
+            </div>
+            
+            <div class="box p-3 mb-3">
+                <a asp-action="Create" class="text-light text-decoration-none">
+                    <div class=" d-flex align-items-center">
+                        <span class="material-symbols-outlined">add_circle</span> <span class="pl-2">Create a new task</span>
+                    </div>
+
+                </a>
+            </div>
+
+            @foreach (var item in Model)
+            {
+                @if (item.Status == (Status)2)
+                {
+                    <div class="box p-3 mb-3">
+                        <div>
+                            @if (item.Priority == (Priority)0)
+                            {
+                                <span class="badge badge-pill bg-high">High</span>
+                            }
+                            else if (item.Priority == (Priority)1)
+                            {
+                                <span class="badge badge-pill bg-medium">Medium</span>
+                            }
+                            else if (item.Priority == (Priority)2)
+                            {
+                                <span class="badge badge-pill bg-low">Low</span>
+                            }
+
+                        </div>
+                        <div>
+                            <span class="font-weight-bold">@Html.DisplayFor(modelItem => item.Title)</span>
+                        </div>
+                        <div>
+                            <span>@Html.DisplayFor(modelItem => item.Description)</span>
+                        </div>
+                        <div>
+                            <p class="text-grey">@Html.DisplayFor(modelItem => item.DueDate)</p>
+                        </div>
+                        <div>
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <a asp-action="Edit" asp-route-id="@item.Id" class="text-light text-decoration-none">
+                                        <div class="d-flex align-items-center">
+                                            <span class="material-symbols-outlined">edit</span>
+                                        </div>
+
+                                    </a>
+                                </div>
+                                <div class="col-md-4">
+                                    <a asp-action="Details" asp-route-id="@item.Id" class="text-purple text-decoration-none">
+                                        <div class="d-flex align-items-center justify-content-center">
+                                            <span class="material-symbols-outlined">info</span>
+                                        </div>
+
+                                    </a>
+                                </div>
+                                <div class="col-md-4">
+                                    <a asp-action="Delete" asp-route-id="@item.Id" class="text-danger text-decoration-none">
+                                        <div class="d-flex align-items-center justify-content-end">
+                                            <span class="material-symbols-outlined">delete</span>
+                                        </div>
+
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                }
+            }
+
+           
+
+
+        </div>
+
+        
+        <div class="col-md-3 box mr-5 p-3">
+            <div class="text-center mb-3">
+                <h5 class="font-weight-bold">In Progress</h5>
+            </div>
+            @foreach (var item in Model)
+            {
+                @if (item.Status == (Status)1)
+                {
+                    <div class="box p-3 mb-3">
+                        <div>
+                            @if (item.Priority == (Priority)0)
+                            {
+                                <span class="badge badge-pill bg-high">High</span>
+                            }
+                            else if (item.Priority == (Priority)1)
+                            {
+                                <span class="badge badge-pill bg-medium">Medium</span>
+                            }
+                            else if (item.Priority == (Priority)2)
+                            {
+                                <span class="badge badge-pill bg-low">Low</span>
+                            }
+
+                        </div>
+                        <div>
+                            <span class="font-weight-bold">@Html.DisplayFor(modelItem => item.Title)</span>
+                        </div>
+                        <div>
+                            <span>@Html.DisplayFor(modelItem => item.Description)</span>
+                        </div>
+                        <div>
+                            <p class="text-grey">@Html.DisplayFor(modelItem => item.DueDate)</p>
+                        </div>
+                        <div>
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <a asp-action="Edit" asp-route-id="@item.Id" class="text-light text-decoration-none">
+                                        <div class="d-flex align-items-center">
+                                            <span class="material-symbols-outlined">edit</span>
+                                        </div>
+
+                                    </a>
+                                </div>
+                                <div class="col-md-4">
+                                    <a asp-action="Details" asp-route-id="@item.Id" class="text-purple text-decoration-none">
+                                        <div class="d-flex align-items-center justify-content-center">
+                                            <span class="material-symbols-outlined">info</span>
+                                        </div>
+
+                                    </a>
+                                </div>
+                                <div class="col-md-4">
+                                    <a asp-action="Delete" asp-route-id="@item.Id" class="text-danger text-decoration-none">
+                                        <div class="d-flex align-items-center justify-content-end">
+                                            <span class="material-symbols-outlined">delete</span>
+                                        </div>
+
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                }
+            }
+        </div>
+
+        <div class="col-md-3 box mr-5 p-3">
+            <div class="text-center mb-3">
+                <h5 class="font-weight-bold">Completed</h5>
+            </div>
+            @foreach (var item in Model)
+            {
+                @if (item.Status == (Status)0)
+                {
+                    <div class="box p-3 mb-3">
+                        <div>
+                            @if (item.Priority == (Priority)0)
+                            {
+                                <span class="badge badge-pill bg-high">High</span>
+                            }
+                            else if (item.Priority == (Priority)1)
+                            {
+                                <span class="badge badge-pill bg-medium">Medium</span>
+                            }
+                            else if (item.Priority == (Priority)2)
+                            {
+                                <span class="badge badge-pill bg-low">Low</span>
+                            }
+
+                        </div>
+                        <div>
+                            <span class="font-weight-bold">@Html.DisplayFor(modelItem => item.Title)</span>
+                        </div>
+                        <div>
+                            <span>@Html.DisplayFor(modelItem => item.Description)</span>
+                        </div>
+                        <div>
+                            <p class="text-grey">@Html.DisplayFor(modelItem => item.DueDate)</p>
+                        </div>
+                        <div>
+                            <div>
+                                <div class="row">
+                                    <div class="col-md-4">
+                                        <a asp-action="Edit" asp-route-id="@item.Id" class="text-light text-decoration-none">
+                                            <div class="d-flex align-items-center">
+                                                <span class="material-symbols-outlined">edit</span>
+                                            </div>
+
+                                        </a>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <a asp-action="Details" asp-route-id="@item.Id" class="text-purple text-decoration-none">
+                                            <div class="d-flex align-items-center justify-content-center">
+                                                <span class="material-symbols-outlined">info</span>
+                                            </div>
+
+                                        </a>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <a asp-action="Delete" asp-route-id="@item.Id" class="text-danger text-decoration-none">
+                                            <div class="d-flex align-items-center justify-content-end">
+                                                <span class="material-symbols-outlined">delete</span>
+                                            </div>
+
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                }
+            }
+        </div>
+
+    </div>
+
+</div>
+
+
+<style>
+    body {
+        background-color: black !important;
+        color: white !important;
+    }
+
+    .input {
+        margin-top: 1%;
+        color: gray;
+        background-color: transparent;
+        border-radius: 15px;
+        border: 1px solid gray;
+        padding: 12px 12px 12px 20px;
+        width: 100%;
+    }
+
+    .check {
+        background-color: transparent;
+    }
+
+    .text-purple {
+        color: #29208D !important;
+    }
+
+    .text-grey {
+        color: dimgray;
+    }
+
+    .bg-purple {
+        background-color: #29208D !important;
+    }
+
+    .box {
+        border: 1px solid grey;
+        border-radius: 5px;
+    }
+
+    .bg-low {
+        background-color: lightgreen;
+        color: black;
+    }
+
+    .bg-medium {
+        background-color: coral;
+        color: black;
+    }
+
+    .bg-high {
+        background-color: #BA110C;
+        color: black;
+    }
+
+    .bg-mobile {
+        background-color: deeppink;
+    }
+
+    .bg-web {
+        background-color: purple;
+    }
+</style>
+
+<link rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,0" />
+
+
+
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
